[project]
name = "salko-ua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "certifi==2026.2.25",
  "charset-normalizer==3.4.4",
  "idna==3.11",
  "lxml==6.1.0",
  "numpy==2.4.2",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.2",
  "requests==2.33.0",
  "six==1.17.0",
  "tzdata==2025.3",
  "urllib3==2.6.3",
]
